--- a/css/style.css
+++ b/css/style.css
@@ -92,20 +92,25 @@ button {
   gap: 30px;
 }
 
-.btn {
+/* .btn {
   border-radius: 10px;
   width: 130px;
   height: 130px;
   color: black;
-}
+} */
 
 .img_choice {
-    width: 70%;
-    height: 70%;
+  border-radius: 10px;
+  width: 130px;
+  height: 130px;
+  padding: 10px;
+  transition: all 0.4s ease;
 }
 
-.btn:hover {
-  background-color: ;
+.img_choice:hover {
+  cursor: pointer;
+  transform: scale(1.2);
+  /* box-shadow: 0 0 20px 1px; */
 }
 
 .btn:active {
@@ -126,14 +131,59 @@ button {
   color: var(--frost-text);
 }
 
-/* .overlay {
+.replay {
+  position: fixed;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  width: 300px;
+  padding: 30px;
+  border-radius: 12px;
+  background-color: #003869;
+  text-align: center;
+  font-size: 30px;
+  user-select: none;
+  transform: translate(-50%, -50%) scale(0);
+  transition: 200ms ease-in-out;
+}
+
+.replay.active {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.replay-title {
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.btn_restart {
+  padding: 10px 20px;
+  margin-top: 25px;
+  margin-bottom: 15px;
+  border-radius: 10px;
+  background-color: #004e92;
+}
+
+.btn_restart:hover {
+    padding: 10px 20px;
+    margin-top: 25px;
+    margin-bottom: 15px;
+    border-radius: 10px;
+    color: #004e92;
+    background-color: var(--frost-text);
+  }
+
+.overlay {
   display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  background-color: red;
+  background: var(--frost-main);
   opacity: 0.6;
 }
 
 .overlay.active {
   display: block;
-} */
+}
